--- a/car.html
+++ b/car.html
@@ -11,9 +11,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500&family=Unbounded:wght@400;500;600&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="https://img.icons8.com/fluency/96/null/carpool.png" type="image/x-icon">
 <!-- end link  -->
 </head>
 <body>
-    
+    <div class="navber">
+        <div class="logo">
+<img src="img/logo-removebg-preview.png" alt="">
+        </div>
+        <div class="manu">
+<a href="#">Home</a>
+<a href="#">About</a>
+<a href="#">Galarry</a>
+<a href="#">Contact</a>
+        </div>
+        <div class="shopicon">
+<a href="#"> Buy now</a>
+        </div>
+    </div>
 </body>
 </html>
