--- a/car.html
+++ b/car.html
@@ -29,5 +29,38 @@
 <a href="#"> Buy now</a>
         </div>
     </div>
+    <!-- banner -->
+    <div class="banner">
+       <div class="card">
+        <img src="img/img1.jpg" alt="">
+        <h3>Rose royel</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore repudiandae veniam, excepturi praesentium placeat sunt ducimus culpa ad, deserunt porro odit quae, autem nisi sequi repellat tempore est reiciendis assumenda expedita. Distinctio temporibus minima veniam reprehenderit deleniti magnam! Modi magni sed accusamus ducimus? Optio iste id placeat nulla perspiciatis libero doloremque vel similique fugiat modi. Velit, sit necessitatibus? Dolores autem deserunt qui assumenda magnam nisi ducimus repellat! Quis vel, quia velit, blanditiis facere nisi, porro ex suscipit minus non excepturi! Ullam placeat ad quae asperiores dolore, dicta neque architecto amet tenetur necessitatibus. Praesentium in, explicabo a necessitatibus beatae perferendis.</p>
+       </div>
+       <div class="card">
+        <img src="img/img2.jpg" alt="">
+        <h3>Rose royel</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore repudiandae veniam, excepturi praesentium placeat sunt ducimus culpa ad, deserunt porro odit quae, autem nisi sequi repellat tempore est reiciendis assumenda expedita. Distinctio temporibus minima veniam reprehenderit deleniti magnam! Modi magni sed accusamus ducimus? Optio iste id placeat nulla perspiciatis libero doloremque vel similique fugiat modi. Velit, sit necessitatibus? Dolores autem deserunt qui assumenda magnam nisi ducimus repellat! Quis vel, quia velit, blanditiis facere nisi, porro ex suscipit minus non excepturi! Ullam placeat ad quae asperiores dolore, dicta neque architecto amet tenetur necessitatibus. Praesentium in, explicabo a necessitatibus beatae perferendis.</p>
+       </div>
+       <div class="card">
+        <img src="img/img3.jpg" alt="">
+        <h3>Rose royel</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore repudiandae veniam, excepturi praesentium placeat sunt ducimus culpa ad, deserunt porro odit quae, autem nisi sequi repellat tempore est reiciendis assumenda expedita. Distinctio temporibus minima veniam reprehenderit deleniti magnam! Modi magni sed accusamus ducimus? Optio iste id placeat nulla perspiciatis libero doloremque vel similique fugiat modi. Velit, sit necessitatibus? Dolores autem deserunt qui assumenda magnam nisi ducimus repellat! Quis vel, quia velit, blanditiis facere nisi, porro ex suscipit minus non excepturi! Ullam placeat ad quae asperiores dolore, dicta neque architecto amet tenetur necessitatibus. Praesentium in, explicabo a necessitatibus beatae perferendis.</p>
+       </div>
+       <div class="card">
+        <img src="img/img4.jpg" alt="">
+        <h3>Rose royel</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore repudiandae veniam, excepturi praesentium placeat sunt ducimus culpa ad, deserunt porro odit quae, autem nisi sequi repellat tempore est reiciendis assumenda expedita. Distinctio temporibus minima veniam reprehenderit deleniti magnam! Modi magni sed accusamus ducimus? Optio iste id placeat nulla perspiciatis libero doloremque vel similique fugiat modi. Velit, sit necessitatibus? Dolores autem deserunt qui assumenda magnam nisi ducimus repellat! Quis vel, quia velit, blanditiis facere nisi, porro ex suscipit minus non excepturi! Ullam placeat ad quae asperiores dolore, dicta neque architecto amet tenetur necessitatibus. Praesentium in, explicabo a necessitatibus beatae perferendis.</p>
+       </div>
+       <div class="card">
+        <img src="img/img5.jpg" alt="">
+        <h3>Rose royel</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore repudiandae veniam, excepturi praesentium placeat sunt ducimus culpa ad, deserunt porro odit quae, autem nisi sequi repellat tempore est reiciendis assumenda expedita. Distinctio temporibus minima veniam reprehenderit deleniti magnam! Modi magni sed accusamus ducimus? Optio iste id placeat nulla perspiciatis libero doloremque vel similique fugiat modi. Velit, sit necessitatibus? Dolores autem deserunt qui assumenda magnam nisi ducimus repellat! Quis vel, quia velit, blanditiis facere nisi, porro ex suscipit minus non excepturi! Ullam placeat ad quae asperiores dolore, dicta neque architecto amet tenetur necessitatibus. Praesentium in, explicabo a necessitatibus beatae perferendis.</p>
+       </div>
+       <div class="card">
+        <img src="img/img6.jpg" alt="">
+        <h3>Rose royel</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis labore repudiandae veniam, excepturi praesentium placeat sunt ducimus culpa ad, deserunt porro odit quae, autem nisi sequi repellat tempore est reiciendis assumenda expedita. Distinctio temporibus minima veniam reprehenderit deleniti magnam! Modi magni sed accusamus ducimus? Optio iste id placeat nulla perspiciatis libero doloremque vel similique fugiat modi. Velit, sit necessitatibus? Dolores autem deserunt qui assumenda magnam nisi ducimus repellat! Quis vel, quia velit, blanditiis facere nisi, porro ex suscipit minus non excepturi! Ullam placeat ad quae asperiores dolore, dicta neque architecto amet tenetur necessitatibus. Praesentium in, explicabo a necessitatibus beatae perferendis.</p>
+       </div>
+    </div>
 </body>
 </html>
